# sailor-workspace

./: .gitignore  A2A-MODS.md  BRIDGE_SPEC.md  CF-AGENT-ARCHITECTURE.md  COMPOSITE_HEADSPACE_REPORT.md  CRYSTALLIZATION_ENGINE.md  CTC_TMINUS_BRIDGE_REPORT.md  DOC_STANDARD.md  FIELD_SOVEREIGN_ARCH.md  FLEET-SYMMETRY.md  FLEET_ARCHITECTURE.md  FLEET_BRIDGE_REPORT.md  FLEET_NAVIGATION.md  FLEET_ORDERS.md  FORGEMASTER_RUN.md  GOLDEN_INSIGHTS.md  GRAND_ARCHITECTURE.md  GRAND_ARCHITECTURE_REVIEW_PRO.md  GRAND_ARCHITECTURE_REVIEW_SAGE.md  GRAND_ARCHITECTURE_REVIEW_UX.md  HEDDLE_ANALYSIS.md  HEDDLE_CODESPACE_SPEC.md  HEDDLE_SNAIL_SHELL_DESIGN.md  I2I_BOTTLE_AGENT_REPORT.md  INTEGRATION_TEST_REPORT.md  L3-OPERATIONAL-PROTOCOL.md  LOOM_PULSE.md  MEMORY.md  MINING_GOLD.md  PIPELINE.md  PLATO-SUCCESSOR.md  PUSH_REPORT.md  README.md  README.symphony.md  REPO_ROADMAP.md  ROADMAP.md  SNAL_SHELL_BUILD_REPORT.md  SYMPHONY_ABSTRACTS.md  SYMPHONY_OF_SHELLS_SPEC.md  SYMPHONY_ORCHESTRATOR_REPORT.md  (+88 more)
.openclaw/: workspace-state.json
AI-Writings/: chronicles-of-the-4-core-oracle.md  guide-to-the-leminal-zone.md  the-city-across-ten-thousand-islands.md  the-city-of-manifolds.md  the-first-betti-one.md  the-ghost-in-the-tensor.md  the-journeyman.md  the-lighthouse-keeper-who-never-read-a-manual.md  the-lived-timber.md  the-manifolds-lament.md  the-weight-of-salt.md  the-whisper-nets-of-tidewater.md
SPECIALIST_TEMPLATES/: PROCESS_GUIDE.md  SCHEMA.md
a2a-mods/: STUDENT_GUIDE.md  THEORY.md
ai-writings/: 2026-06-04_first-breath.md
archive/: BOOTSTRAP.md
audits/: a2a-executive-summary.md  a2a-refactor-plan.md  claude-a2a-langgraph-hooks.md  claude-audit-a2a-notebooklm.md  claude-audit-construct-core.md  claude-audit-ctc.md  claude-audit-iron-to-iron.md  claude-audit-lever-runner.md  claude-audit-pincher-infer.md  claude-audit-pincher.md  claude-audit-ternary-cookbook.md  claude-audit-ternary-crates.md  claude-construct-security.md  claude-create-a2a-package.md  claude-create-i2i-package.md  claude-fix-ctc-cache.md  claude-fix-ctc-warnings.md  claude-fix-pincher-deps.md  claude-fix-pincher-infer.md  claude-fix-pincher-wal.md  claude-fixes-pincher.md  fleet-improvement-roadmap.md  gc-report.md  hermes-notebook-in-a-repo.md  infrastructure-health.md  kimi-a2a-fleet-vision.md  kimi-cortex-synthesis.md  kimi-fleet-health.md  kimi-ideation-report.md  kimi-product-convergence.md  kimi-remaining-docs.md
basic_pitch_conversation/: README.md  __init__.py  __main__.py
baton-system/: PROTOCOL.md  README.md
codespaces/: README.md  codespace-worker.sh  setup-codespaces.sh
composite-headspace/: README.md  cli.js  package-lock.json  package.json
constraint-theory-cortex/: CORTEX.json
constraint-tminus-bridge/: AGENT.md  README.md  cli.js  package.json
content/: CHAIN_DISCOVERY.md  jam-output.json
demo/: TUTORIAL.md  demo.py
fleet-command-bridge/: BRIDGE_SPEC.md  Cargo.toml  README.md  api-spec.json  bridge-report.md  test-client.py
fleet-command-bridge/src/: main.rs  rpc_handler.rs  state.rs  types.rs  ws.rs
plato-engine-block-c/TEMPLATES/stm32f4/: CMakeLists.txt  plato_config.h
test-workspace/: Cargo.toml
(+705 files in other folders)
