[package]
name = "fleet-command-bridge"
version = "0.1.0"
edition = "2021"
description = "WebSocket + JSON-RPC bridge between kimi-swarm-frontend and pincher/polychora backends"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1", features = [] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Futures utility for websocket streams
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unix socket client (to connect to pincher-core RPC)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
